﻿更新履歴

==== Ver 2.3.2-dev(2019/xx/xx)
 * CHG: htn.to の短縮URLを展開する際に強制的にHTTPSを使用する
 * FIX: Twemojiを有効にすると絵文字の後に余分な文字が表示される場合がある不具合を修正

==== Ver 2.3.1(2019/04/22)
 * FIX: 2019/5/20に予定されているTwitter APIの仕様変更によりエラーが発生する問題を修正
  - OpenTween v2.3.0 までのバージョンは2019/5/20以降に使用できなくなる可能性があります
 * FIX: 絵文字を含むツイートの非公式RTで余分なHTMLタグが混入する不具合を修正 (thx @380Nayuta!)

==== Ver 2.3.0(2019/04/08)
 * CHG: 投稿欄にフォーカスしている間は一部のショートカットを無効にします (thx @pitermach, @lukaszgo1!)
  - 対象となるショートカットは Ctrl+Alt+S (Fav+RT), Ctrl+Alt+R (Fav+非公式RT), Ctrl+Alt+H (ユーザー指定のURLを開く) の3つです
  - AltGrキーを使う言語のキーボートとショートカットキーが重複する問題への対処です
 * CHG: Microsoft Translator Text API v3 に対応
  - OpenTweenの古いバージョンの翻訳機能は 2019/4/30 以降に使用できなくなります
 * CHG: 短縮URLの展開時にHTTPSが使用できるドメインは強制的にHTTPSを使用する
 * CHG: 廃止された短縮URLサービスのドメインをURL展開の対象から削除
 * CHG: 短縮URLで生成されるURLがHTTPSになるように変更
 * CHG: 廃止された twurl.nl によるURL短縮機能を削除
 * CHG: img.azyobuzi.net 利用時の接続先をHTTPSに変更
 * CHG: 廃止されたサービスのサムネイル表示対応を削除
 * CHG: サムネイル表示時にHTTPSが使用できるサービスではHTTPSを使用する
 * CHG: サービス終了したFavstarに関するメニュー項目を削除
 * CHG: ヘルプページ・Google検索・Wikipedia等をHTTPSに対応したURLに変更

==== Ver 2.2.0(2018/11/03)
 * NEW: 絵文字に関する文字数カウントの新仕様に対応しました
  - この変更により「👩‍👧‍👦」「👨‍🎨」など複数の文字で構成される絵文字を入力した場合の文字数制限が緩和されます
 * NEW: Twemoji 11.2.0 に対応しました
  - Unicode 11.0 で追加された絵文字が表示されるようになります
 * NEW: ツイートの投稿に失敗し再試行せずにキャンセルした場合は、発言入力欄に未投稿のテキストを復元します
 * NEW: アップデート通知のダイアログに「このバージョンを無視」ボタンを追加しました
 * FIX: ユーザー情報ダイアログでbioに絵文字を含む場合にハッシュタグやメンションのリンク範囲がずれる不具合を修正
 * FIX: 投稿時取得の設定がオンの場合に、投稿したRTがタイムラインに反映されないことがある不具合を修正

==== Ver 2.1.2(2018/09/30)
 * CHG: 投稿時取得の設定がオフでも、投稿した内容を即時タイムラインに反映させるようにしました
 * CHG: APIのレートリミットに達した場合、リセットされるまでは手動で更新してもリクエストを送らないように変更しました
 * CHG: Directタブの更新時に旧DM APIへのアクセスを行わないよう変更しました (旧API廃止のため)
 * FIX: 起動時に取得したDMが1件も表示されない場合がある不具合を修正 (thx @brianhartgen!)
 * FIX: 起動直後からレートリミット規制中であった場合に解除までの時間がステータスバーに表示されない不具合を修正

==== Ver 2.1.1(2018/08/19)
 * FIX: 新DM APIで取得件数が0件の場合にエラーが発生する不具合を修正
 * FIX: 新DM APIでSourceが空のDMのみ返ってきた場合にエラーが発生する不具合を修正

==== Ver 2.1.0(2018/08/18)
 * NEW: DMの一覧取得・削除について新APIに対応しました