@@ -1,6 +1,8 @@
 ﻿更新履歴
 
 ==== Ver 2.3.2-dev(2019/xx/xx)
+ * NEW: Twemoji 12.0.0 に対応しました
+  - Unicode 12.0 で追加された絵文字が表示されるようになります
  * CHG: htn.to の短縮URLを展開する際に強制的にHTTPSを使用する
  * FIX: Twemojiを有効にすると絵文字の後に余分な文字が表示される場合がある不具合を修正
 
